# red_msgs

./: CMakeLists.txt  README.md  package.xml
action/: LTPTask.action
msg/: ManipulationObject.msg  Pose.msg
srv/: ArmPoses.srv  CameraListObjects.srv  CameraStop.srv  CameraTask.srv  ManipulationObjects.srv
